/*
 * $Id: ChangeLog,v 1.1341 2003/08/11 23:38:07 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-12 12:45 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * xharbour/contrib/libmisc/Makefile.bc
   * dbftools.c (FIELDTYPE(), FIELDSIZE(), FIELDDECI()) moved from
     libmisc to libct

2003-08-12 01:02 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/workarea.c
   ! yet another bug in dbeval() fixed for nNext < 0

2003-08-12 01:02 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/workarea.c
   ! fixed bug in dbeval()

2003-08-11 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tget.prg
    ! Fix behavior in picture functions.
      Ex: @5,5 Get nVar picture "@B9999"

2003-08-10 19:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/set.c
   *(All changes on behave of _SET_PRINTFILE place)
    when compiling under Windows (Borland and MSVC Compiler) the
    _SET_PRINTFILE automaticaly point to default printer,(an set device
    to print, direct send data to printer)
    Checking  recieve filename, if no extension is passed ,".prn" is added to file

2003-08-10 23:11 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/libmisc/Makefile
  - xharbour/contrib/libmisc/dbftools.c
  * xharbour/contrib/libct/Makefile
  + xharbour/contrib/libct/dbftools.c
   * dbftools.c (FIELDTYPE(), FIELDSIZE(), FIELDDECI()) moved from
     libmisc to libct

  * xharbour/contrib/libct/dbftools.c
   ! small corectrion to avoid GPFs and return proper values when
     no open area or bad param pass
   + FIELDNUM(), DBFSIZE() added

2003-08-09 22:18 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/xharbour.spec
    * removed ${RPM_OPT_FLAGS} from C_USR
      '-pipe' breaks building proces on RH9 when user doesn't install